# first-rust-web-server

.idx/: dev.nix
template/: Cargo.toml  Dockerfile  docker-compose.yaml
template/src/: main.rs
