[package]
name = "first-rust-web-server"
version = "0.1.0"
edition = "2021"
description = "first-rust-web-server"
repository = "https://github.com/ryonagato/first-rust-web-server"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"]}